[package]
name = "single-clustering"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
kiddo = "5.0.3"
nalgebra = "0.33.2"
nalgebra-sparse = "0.10.0"
ndarray = {version = "0.16.1" , features = ["rayon"]}
num-traits = "0.2.19"
petgraph = { version = "0.8.1", features = ["rayon"] }
rayon = "1.10.0"
single-utilities = "0.6.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
