[package]
name = "single-clustering"
version = "0.1.0"
edition = "2024"
authors = ["Ian F. Diks"]
homepage = "https://singlerust.com"
repository = "https://github.com/SingleRust/single-clustering"
license-file = "LICENSE.md"
readme = "README.md"
description = "A high-performance network clustering library implementing community detection algorithms like Louvain and Leiden. Features efficient graph representation, abstract grouping systems, and K-NN graph creation from high-dimensional data. Provides parallel computation support via Rayon for handling large networks."


[dependencies]
anyhow = "1.0.98"
kiddo = "5.0.3"
nalgebra-sparse = "0.10.0"
ndarray = {version = "0.16.1" , features = ["rayon"]}
num-traits = "0.2.19"
petgraph = { version = "0.8.1", features = ["rayon"] }
rayon = "1.10.0"
single-utilities = "0.6.0"
rand = "0.9.0"
rand_chacha = "0.9.0"
nabo = "0.5.0"
kdtree = "0.7.0"
